cv html updated

--- a/MyCV.html
+++ b/MyCV.html
@@ -5,18 +5,23 @@
  </head>
    <body>
    <div style="width:90%; margin:auto">
-   <div style="width:85%; height:230px; margin:auto">
-	   <marquee style="color:blue">Get Hired Me....!!!</marquee>
+   <div style="width:100%; height:200px; margin:auto">
 	   
 	   <div style="width:80%; float:left">    
-		 <marquee style="color:green; font-size:20px; font-style: italic; line-height:200px; text-align:left">CURRICULUM VITAE of MD. MEHEDI HASAN</marquee>
+		 <marquee style="color:green; font-size:20px; font-style: italic; line-height:200px; text-align:left">Curriculum Vitae of MD. MEHEDI HASAN</marquee>
 	   </div>
 	   
 		<div style="width:20%; float:left; text-align:right;">  
-		<img src="Shuvo.jpg" alt="banian tree" width="150" height="150">
+		<img src="PP-Photo.jpg" alt="Md. Mehedi Hasan" width="150" height="150">
 	  </div>
 	  
 	</div>
+	
+	<div style="width:100%; line-height: 40px; text-align:center; color:yellow; background:grey; margin:auto;">
+	<p>"I can not do everything, but I can do something. I must not fail to do the something that I can do." - Helen Keller</p>
+	</div>
+	
+	<div style="width:100%; height:auto; margin:auto">
  
 
      <h2 style="color:blue; text-align:left;">Summary</h2>
@@ -40,7 +45,7 @@
 		<h2 style="color:blue; text-align:left;">Work Experience</h2>
 	 
 	<p>
-		Date : February 01, 2018 to August 31, 2018 <br>Position held : <b>Senior Officer</b><br>Organization / Project : Sustainable Research and Consultancy (SRC) Ltd.<BR>Succinct responsibilities:<br>
+		Date : February 01, 2018 to August 31, 2018 <br>Position held : <b>Officer</b><br>Organization / Project : Sustainable Research and Consultancy (SRC) Ltd.<BR>Succinct responsibilities:<br>
 		
 		<ul style="list-style-type:square">
 			 <li>To manage development, planning, and implementation policies, procedures and programs in support of the project.</li>
@@ -96,11 +101,11 @@
 		<li>Well disciplined</li> 
 		</ul>
 	</p>
-		<h2 style="color:blue; text-align:left;">Awards</h2>
-		<ul> 2005 : Got a board scholarship for outstanding achievements.</ul>
+		<h2 style="color:blue; text-align:left;">Distinction</h2>
+		<ul> 2005 : Got a board scholarship for achieving Golden A+</ul>
 		
 		<details>
-			<summary style="color:blue; text-align:left; font-size: 22px;"><strong>References</strong></summary>
+			<summary title="Click to Show More" style="color:blue; text-align:left; font-size: 22px;"><strong>References</strong></summary>
 			<ol> 
 				<li> Abu Jubayer, Managing Director (Operation), Sustainable Research and Consultancy (SRC) Ltd. <br> Cell: +880-1711459532 <br>Email: jubayer.buet.bd@gmail.com</li>
 				<li> Suad Rifat Sanjid, Senior Executive Officer (Accounts & Finance), Al-Noor Agro Industries Ltd. <br> Cell: +880-1978-842627 <br>Email: srsanjid@gmail.com
@@ -111,10 +116,11 @@
 		<h2 style="color:blue; text-align:left;">Acknowledgement</h2>
 	<p style="text-align:justify"> I, the undersigned hereby certify that, to the best of my knowledge and belief, above mentioned credentials
 correctly describes myself, and I will be liable for any feigned information.</p>
+</div>
 		
  
-	<div style="width:100%; line-height:40px; text-align:center; background:grey; margin:0 auto;">
-		<p>&copy;2018 Shuvo. All rights reserved.</p>
+	<div style="width:100%; line-height:40px; text-align:center; background:grey; margin:auto;">
+		<p>&copy; Mehedi Hasan Shuvo</p>
  
 	</div>
 	</div>
