cv reference updated

--- a/MyCV.html
+++ b/MyCV.html
@@ -102,13 +102,15 @@
 		</ul>
 	</p>
 		<h2 style="color:blue; text-align:left;">Distinction</h2>
-		<ul> 2005 : Got a board scholarship for achieving Golden A+</ul>
+		<ul> 2005 : Got a board scholarship for achieving Golden A<sup>+</sup></ul>
 		
 		<details>
 			<summary title="Click to Show More" style="color:blue; text-align:left; font-size: 22px;"><strong>References</strong></summary>
 			<ol> 
-				<li> Abu Jubayer, Managing Director (Operation), Sustainable Research and Consultancy (SRC) Ltd. <br> Cell: +880-1711459532 <br>Email: jubayer.buet.bd@gmail.com</li>
-				<li> Suad Rifat Sanjid, Senior Executive Officer (Accounts & Finance), Al-Noor Agro Industries Ltd. <br> Cell: +880-1978-842627 <br>Email: srsanjid@gmail.com
+				<li> <strong>Abu Jubayer</strong>
+				<br>Deputy Director (Operation), Center for Continuing Education Consultancy & Research (CCECR), Stamford University Bangladesh, Dhaka. <br> Cell: +880-1711459532 <br>Email: jubayer.buet.bd@gmail.com</li>
+				<li> <strong>Md. Mehedi Hasan</strong>
+				<br>Assistant Judge, District & Sessions Judge Court, Rangpur. <br> Cell: +880-1710-491199 <br> Email: mmhasan508@gmail.com
 				</li>
 			</ol>
 		</details>
